--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native-stack": "^6.9.26",
+    "cloudinary-react-native": "^1.0.0",
     "expo": "~51.0.14",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
     "expo-camera": "~15.0.11",
-    "expo-image": "~1.12.12"
+    "expo-image": "~1.12.12",
+    "expo-media-library": "~16.0.3",
+    "react": "18.2.0",
+    "react-native": "0.74.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
