--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native-stack": "^6.9.26",
-    "cloudinary-react-native": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "expo": "~51.0.14",
     "expo-camera": "~15.0.11",
     "expo-image": "~1.12.12",
+    "expo-image-picker": "~15.0.5",
     "expo-media-library": "~16.0.3",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "~18.2.45",
     "typescript": "~5.3.3"
   },
