--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "crypto-js": "^4.2.0",
     "expo": "~51.0.14",
     "expo-camera": "~15.0.11",
+    "expo-crypto": "~13.0.2",
     "expo-image": "~1.12.12",
     "expo-image-picker": "~15.0.5",
     "expo-media-library": "~16.0.3",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "expo-crypto": "~13.0.2"
+    "socket.io-client": "^4.7.5",
+    "react-native-maps": "1.14.0",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
