--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "crypto-js": "^4.2.0",
     "expo": "~51.0.14",
     "expo-camera": "~15.0.11",
     "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.18",
     "expo-image": "~1.12.12",
     "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.3",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "socket.io-client": "^4.7.5",
     "react-native-maps": "1.14.0",
-    "expo-location": "~17.0.1"
+    "react-native-screens": "3.31.1",
+    "socket.io-client": "^4.7.5",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
